added regularization hw (not completely)

--- a/1.3 Linear Regression.ipynb
+++ b/1.3 Linear Regression.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8229e03b",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 2,
    "id": "7acc2ed3",
    "metadata": {},
    "outputs": [],
@@ -311,352 +311,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 3,
    "id": "7afca9aa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x_train</th>\n",
-       "      <th>y_train</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.138368</td>\n",
-       "      <td>0.838812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.157237</td>\n",
-       "      <td>0.889313</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.188684</td>\n",
-       "      <td>1.430040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.685553</td>\n",
-       "      <td>1.717309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.874237</td>\n",
-       "      <td>2.032588</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1.182421</td>\n",
-       "      <td>1.860341</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.251605</td>\n",
-       "      <td>1.878928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1.270474</td>\n",
-       "      <td>2.430015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1.402553</td>\n",
-       "      <td>2.327856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1.427711</td>\n",
-       "      <td>2.203649</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1.471737</td>\n",
-       "      <td>2.207708</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1.534632</td>\n",
-       "      <td>1.388039</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1.553500</td>\n",
-       "      <td>1.718544</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1.842816</td>\n",
-       "      <td>2.103264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2.018921</td>\n",
-       "      <td>2.295177</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2.289369</td>\n",
-       "      <td>1.965152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2.641579</td>\n",
-       "      <td>0.745949</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2.685606</td>\n",
-       "      <td>1.160798</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2.798816</td>\n",
-       "      <td>0.847264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2.823974</td>\n",
-       "      <td>0.755585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2.912027</td>\n",
-       "      <td>1.304593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2.924606</td>\n",
-       "      <td>1.066442</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>3.270527</td>\n",
-       "      <td>0.676944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>3.314553</td>\n",
-       "      <td>0.579166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>3.528395</td>\n",
-       "      <td>0.133375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>3.597580</td>\n",
-       "      <td>0.171235</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>3.761106</td>\n",
-       "      <td>0.196110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>3.773685</td>\n",
-       "      <td>-0.072016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>3.918343</td>\n",
-       "      <td>0.118110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>4.107027</td>\n",
-       "      <td>0.466673</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>4.107027</td>\n",
-       "      <td>0.315611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>4.125895</td>\n",
-       "      <td>0.214945</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>4.188790</td>\n",
-       "      <td>0.050313</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>4.333448</td>\n",
-       "      <td>0.106148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>4.541001</td>\n",
-       "      <td>0.057132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>4.572448</td>\n",
-       "      <td>-0.057252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>4.622764</td>\n",
-       "      <td>0.449234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>4.641632</td>\n",
-       "      <td>-0.336120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>4.937238</td>\n",
-       "      <td>-0.038237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>5.125922</td>\n",
-       "      <td>0.095250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>5.157369</td>\n",
-       "      <td>0.313029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>5.258001</td>\n",
-       "      <td>-0.231257</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>5.308317</td>\n",
-       "      <td>0.024936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>5.415238</td>\n",
-       "      <td>0.418719</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>5.446685</td>\n",
-       "      <td>0.165727</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>5.509580</td>\n",
-       "      <td>0.266092</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>5.610212</td>\n",
-       "      <td>0.669440</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>5.949843</td>\n",
-       "      <td>0.892383</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>5.968712</td>\n",
-       "      <td>1.265869</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>5.968712</td>\n",
-       "      <td>0.664839</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     x_train   y_train\n",
-       "0   0.138368  0.838812\n",
-       "1   0.157237  0.889313\n",
-       "2   0.188684  1.430040\n",
-       "3   0.685553  1.717309\n",
-       "4   0.874237  2.032588\n",
-       "5   1.182421  1.860341\n",
-       "6   1.251605  1.878928\n",
-       "7   1.270474  2.430015\n",
-       "8   1.402553  2.327856\n",
-       "9   1.427711  2.203649\n",
-       "10  1.471737  2.207708\n",
-       "11  1.534632  1.388039\n",
-       "12  1.553500  1.718544\n",
-       "13  1.842816  2.103264\n",
-       "14  2.018921  2.295177\n",
-       "15  2.289369  1.965152\n",
-       "16  2.641579  0.745949\n",
-       "17  2.685606  1.160798\n",
-       "18  2.798816  0.847264\n",
-       "19  2.823974  0.755585\n",
-       "20  2.912027  1.304593\n",
-       "21  2.924606  1.066442\n",
-       "22  3.270527  0.676944\n",
-       "23  3.314553  0.579166\n",
-       "24  3.528395  0.133375\n",
-       "25  3.597580  0.171235\n",
-       "26  3.761106  0.196110\n",
-       "27  3.773685 -0.072016\n",
-       "28  3.918343  0.118110\n",
-       "29  4.107027  0.466673\n",
-       "30  4.107027  0.315611\n",
-       "31  4.125895  0.214945\n",
-       "32  4.188790  0.050313\n",
-       "33  4.333448  0.106148\n",
-       "34  4.541001  0.057132\n",
-       "35  4.572448 -0.057252\n",
-       "36  4.622764  0.449234\n",
-       "37  4.641632 -0.336120\n",
-       "38  4.937238 -0.038237\n",
-       "39  5.125922  0.095250\n",
-       "40  5.157369  0.313029\n",
-       "41  5.258001 -0.231257\n",
-       "42  5.308317  0.024936\n",
-       "43  5.415238  0.418719\n",
-       "44  5.446685  0.165727\n",
-       "45  5.509580  0.266092\n",
-       "46  5.610212  0.669440\n",
-       "47  5.949843  0.892383\n",
-       "48  5.968712  1.265869\n",
-       "49  5.968712  0.664839"
-      ]
-     },
-     "execution_count": 255,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = pd.read_csv('datasets/non_linear.csv')\n",
-    "data"
+    "data = pd.read_csv('datasets/non_linear.csv')"
    ]
   },
   {
